--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>builder-pom</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Builder POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Builder POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -24,7 +24,7 @@
     <connection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
     <developerConnection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
     <url>https://github.com/litsec/swedish-eid-shibboleth-base/tree/master</url>
-    <tag>release/1.0.0-release</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
