--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -24,7 +24,7 @@
     <connection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
     <developerConnection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
     <url>https://github.com/litsec/swedish-eid-shibboleth-base/tree/master</url>
-    <tag>release/1.0.0-release</tag>
+    <tag>1.0.0-release-tag</tag>
   </scm>
 
   <developers>
