--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -72,6 +72,7 @@
   </repositories>
 
   <distributionManagement>
+  <!-- 
     <snapshotRepository>
       <id>ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
@@ -80,6 +81,15 @@
       <id>ossrh</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
+  -->
+    <snapshotRepository>
+      <id>eidassh</id>
+      <url>https://maven.eidastest.se/artifactory/eidas-snapshot-local</url>
+    </snapshotRepository>
+    <repository>
+      <id>eidasrl</id>
+      <url>https://maven.eidastest.se/artifactory/eidas-release-local</url>
+    </repository>  
   </distributionManagement>
 
   <dependencyManagement>
