--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.1</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -72,16 +72,6 @@
   </repositories>
 
   <distributionManagement>
-  <!-- 
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  -->
     <snapshotRepository>
       <id>eidassh</id>
       <url>https://maven.eidastest.se/artifactory/eidas-snapshot-local</url>
