--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.1</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -41,16 +41,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
 
-    <!-- Versions on dependencies -->
     <shibboleth.version>3.3.1</shibboleth.version>
-    <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>0.9.1</opensaml-ext.version>
-    <opensaml.swedish-eid.version>0.9.1</opensaml.swedish-eid.version>
-    <spring.version>4.3.2.RELEASE</spring.version>
-    <spring.webflow.version>2.4.4.RELEASE</spring.webflow.version>
-
-    <slf4j.version>1.7.12</slf4j.version>
-    <junit.version>4.12</junit.version>
   </properties>
 
   <repositories>
@@ -78,16 +69,6 @@
   </repositories>
 
   <distributionManagement>
-    <!-- 
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    -->
     <snapshotRepository>
       <id>eidassh</id>
       <url>https://maven.eidastest.se/artifactory/eidas-snapshot-local</url>
@@ -105,7 +86,7 @@
       <dependency>
         <groupId>se.litsec.sweid.idp</groupId>
         <artifactId>shibboleth-base-dependency-bom</artifactId>
-        <version>1.0.1</version>
+        <version>1.1-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
