--- a/idp/src/main/resources/conf/idp.properties
+++ b/idp/src/main/resources/conf/idp.properties
@@ -126,7 +126,7 @@ idp.authn.flows = Password
 
 # Whether to prioritize "active" results when an SP requests more than
 # one possible matching login method (V2 behavior was to favor them)
-#idp.authn.favorSSO = false
+idp.authn.favorSSO = true
 
 # Whether to fail requests when a user identity after authentication
 # doesn't match the identity in a pre-existing session.
