--- a/metadata-support/pom.xml
+++ b/metadata-support/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.1.2</version>
+    <version>1.1.3-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
