--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -13,18 +13,16 @@
 
   <licenses>
     <license>
-      <name>GNU General Public License, Version 3</name>
-      <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
-      <comments>A free, copyleft license for software and other kinds of works</comments>
     </license>
   </licenses>
-
+  
   <scm>
     <connection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
     <developerConnection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
     <url>https://github.com/litsec/swedish-eid-shibboleth-base/tree/master</url>
-    <tag>HEAD</tag>
   </scm>
 
   <developers>
@@ -38,8 +36,8 @@
 
   <properties>
     <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>0.9.2</opensaml-ext.version>
-    <opensaml.swedish-eid.version>0.9.2</opensaml.swedish-eid.version>
+    <opensaml-ext.version>0.9.4</opensaml-ext.version>
+    <opensaml.swedish-eid.version>0.9.3</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.3.1</shibboleth.version>
     <shibboleth.java-support.version>7.3.0</shibboleth.java-support.version>
@@ -73,15 +71,15 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>eidassh</id>
-      <url>https://maven.eidastest.se/artifactory/eidas-snapshot-local</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>eidasrl</id>
-      <url>https://maven.eidastest.se/artifactory/eidas-release-local</url>
-    </repository>  
+    <id>ossrh</id>
+    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
   </distributionManagement>
-
+  
   <dependencyManagement>
 
     <dependencies>
@@ -652,7 +650,7 @@
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
-        <version>1.2.16</version>
+        <version>1.2.17</version>
         <scope>test</scope>
         <exclusions>
           <exclusion>
