--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>builder-pom</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.3</version>
 
   <name>Swedish eID :: Builder POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Builder POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -37,6 +37,16 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
       </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      
     </plugins>
   </build>
   
