--- a/idp/src/main/resources/conf/idp.properties
+++ b/idp/src/main/resources/conf/idp.properties
@@ -47,6 +47,25 @@ idp.metadata.signing.cert=%{idp.home}/credentials/metadata-signing.crt
 # a signing key rollover is performed.
 idp.metadata.additional-signing-certs=%{idp.home}/metadata/additional-certs
 
+#
+# Configuration for SAD support
+#
+
+idp.scal2.support=true
+
+# Validity time (in seconds) for issued SAD:s.
+# idp.signature-support.sad.validity-time=300
+
+# The attribute name for the user-ID to use as subject in SAD:s.
+idp.signature-support.sad.userid-attribute-name=urn:oid:1.2.752.29.4.13
+
+# Size of generated ID:s.
+# idp.signature-support.sad.id-size=24
+
+# Signature algorithm to use when signing SAD JWT:s.
+# idp.signature-support.sad.jwt-signing-algorithm=RS256
+
+# end - SAD support
 
 # Sets the bean ID to use as a default security configuration set
 #idp.security.config = shibboleth.DefaultSecurityConfiguration
