--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>shibboleth-base-bom</artifactId>
-  <packaging>jar</packaging>
+  <packaging>jar</packaging>  
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.1.3</version>
+    <version>1.2-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
@@ -46,7 +46,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-sweid-extensions</artifactId>
-        <version>${project.version}</version>
+        <version>1.2-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
@@ -54,7 +54,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-attribute-support</artifactId>
-        <version>${project.version}</version>
+        <version>1.2-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
@@ -62,7 +62,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-metadata-support</artifactId>
-        <version>${project.version}</version>
+        <version>1.2-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
@@ -70,7 +70,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-authn-support</artifactId>
-        <version>${project.version}</version>
+        <version>1.2-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
