--- a/idp/src/main/resources/metadata/metadata.properties
+++ b/idp/src/main/resources/metadata/metadata.properties
@@ -11,7 +11,9 @@ idp.metadata.assuranceCertificationUris=http://id.elegnamnden.se/loa/1.0/loa3
 
 # Comma-separated list of values for the "http://macedir.org/entity-category" extension values. 
 # According to the Swedish eID Framework.
-idp.metadata.entityCategories=http://id.elegnamnden.se/ec/1.0/loa3-pnr
+idp.metadata.entityCategories=http://id.elegnamnden.se/ec/1.0/loa3-pnr,\
+http://id.elegnamnden.se/sprop/1.0/scal2,\
+http://id.elegnamnden.se/sprop/1.0/mobile-auth
 
 # Comma-separated list of the NameIDFormat:s supported by this IdP.
 idp.metadata.nameIDFormats=urn:oasis:names:tc:SAML:2.0:nameid-format:persistent,urn:oasis:names:tc:SAML:2.0:nameid-format:transient
