--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.3</version>
+  <version>1.2-SNAPSHOT</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -45,6 +45,8 @@
     <java.version>1.8</java.version>
 
     <shibboleth.version>3.3.1</shibboleth.version>
+    
+    <shibboleth-base-dependency-bom.version>1.2-SNAPSHOT</shibboleth-base-dependency-bom.version>
     
     <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
     <opensaml.version>3.3.0</opensaml.version>
@@ -88,7 +90,7 @@
       <dependency>
         <groupId>se.litsec.sweid.idp</groupId>
         <artifactId>shibboleth-base-dependency-bom</artifactId>
-        <version>${project.version}</version>
+        <version>${shibboleth-base-dependency-bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
