--- a/shibboleth-extensions/pom.xml
+++ b/shibboleth-extensions/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
