--- a/authn-support/pom.xml
+++ b/authn-support/pom.xml
@@ -4,12 +4,11 @@
 
   <artifactId>shibboleth-authn-support</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.1</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
@@ -35,8 +34,8 @@
   </developers>
 
   <properties>
-    <shibboleth-attribute-support.version>1.2</shibboleth-attribute-support.version>
-    <shibboleth-sweid-extensions.version>1.2</shibboleth-sweid-extensions.version>
+    <shibboleth-attribute-support.version>1.3-SNAPSHOT</shibboleth-attribute-support.version>
+    <shibboleth-sweid-extensions.version>1.3-SNAPSHOT</shibboleth-sweid-extensions.version>
   </properties>
 
   <dependencies>
