--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.2</version>
+  <version>1.3-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -36,8 +36,8 @@
 
   <properties>
     <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>0.9.4</opensaml-ext.version>
-    <opensaml.swedish-eid.version>0.9.4</opensaml.swedish-eid.version>
+    <opensaml-ext.version>0.9.5-SNAPSHOT</opensaml-ext.version>
+    <opensaml.swedish-eid.version>0.9.5-SNAPSHOT</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.3.1</shibboleth.version>
     <shibboleth.java-support.version>7.3.0</shibboleth.java-support.version>
