--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -4,12 +4,11 @@
 
   <artifactId>shibboleth-base</artifactId>
   <packaging>pom</packaging>
-  <version>1.2.1</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
@@ -46,7 +45,7 @@
   </organization>  
 
   <properties>
-    <shibboleth-base-bom.version>1.2.1</shibboleth-base-bom.version>
+    <shibboleth-base-bom.version>1.3-SNAPSHOT</shibboleth-base-bom.version>
   </properties>
 
   <dependencyManagement>
