--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -36,8 +36,8 @@
 
   <properties>
     <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>0.9.5-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>0.9.5-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.0.0</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.0.0</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.3.1</shibboleth.version>
     <shibboleth.java-support.version>7.3.0</shibboleth.java-support.version>
