--- a/idp/src/main/resources/conf/idp.properties
+++ b/idp/src/main/resources/conf/idp.properties
@@ -67,6 +67,9 @@ idp.signature-support.sad.userid-attribute-name=urn:oid:1.2.752.29.4.13
 
 # end - SAD support
 
+# Set to true to require *all* AuthnRequest:s being processed to be signed 
+idp.security.requireAuthnRequestsSigned=false
+
 # Sets the bean ID to use as a default security configuration set
 #idp.security.config = shibboleth.DefaultSecurityConfiguration
 
