--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -4,6 +4,7 @@
 
   <artifactId>shibboleth-base</artifactId>
   <packaging>pom</packaging>
+  <version>1.3.2</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
@@ -45,7 +46,7 @@
   </organization>  
 
   <properties>
-    <shibboleth-base-bom.version>1.3.1</shibboleth-base-bom.version>
+    <shibboleth-base-bom.version>1.3.2</shibboleth-base-bom.version>
   </properties>
 
   <dependencyManagement>
