--- a/shibboleth-extensions/pom.xml
+++ b/shibboleth-extensions/pom.xml
@@ -4,6 +4,7 @@
 
   <artifactId>shibboleth-sweid-extensions</artifactId>
   <packaging>jar</packaging>
+  <version>1.3.2</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
