--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.3</version>
+  <version>1.3.1-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -36,7 +36,7 @@
 
   <properties>
     <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>1.0.0</opensaml-ext.version>
+    <opensaml-ext.version>1.0.1</opensaml-ext.version>
     <opensaml.swedish-eid.version>1.0.0</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.3.1</shibboleth.version>
@@ -113,6 +113,12 @@
         <version>${opensaml.swedish-eid.version}</version>
         <type>jar</type>
         <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>se.litsec.opensaml</groupId>
+            <artifactId>opensaml3-ext</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <!-- OpenSAML -->
