--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -4,7 +4,7 @@
 
   <artifactId>shibboleth-base</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.2</version>
+  <version>1.3.3-SNAPSHOT</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
@@ -68,6 +68,7 @@
     <dependency>
       <groupId>se.litsec.opensaml</groupId>
       <artifactId>opensaml3-ext</artifactId>
+      <version>1.0.1</version>
     </dependency>
 
     <dependency>
