--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -4,12 +4,11 @@
 
   <artifactId>shibboleth-base</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.3-SNAPSHOT</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.3.1</version>
+    <version>1.4-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
@@ -46,7 +45,7 @@
   </organization>  
 
   <properties>
-    <shibboleth-base-bom.version>1.3.2</shibboleth-base-bom.version>
+    <shibboleth-base-bom.version>1.4-SNAPSHOT</shibboleth-base-bom.version>
   </properties>
 
   <dependencyManagement>
@@ -68,7 +67,6 @@
     <dependency>
       <groupId>se.litsec.opensaml</groupId>
       <artifactId>opensaml3-ext</artifactId>
-      <version>1.0.1</version>
     </dependency>
 
     <dependency>
