--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.4.5</version>
+    <version>1.5.0-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
@@ -46,7 +46,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-sweid-extensions</artifactId>
-        <version>1.4.5</version>
+        <version>1.5.0-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
@@ -54,7 +54,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-attribute-support</artifactId>
-        <version>1.4.5</version>
+        <version>1.5.0-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
@@ -62,7 +62,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-metadata-support</artifactId>
-        <version>1.4.5</version>
+        <version>1.5.0-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
@@ -70,7 +70,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-authn-support</artifactId>
-        <version>1.4.5</version>
+        <version>1.5.0-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
