--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.4.5</version>
+  <version>1.5.0-SNAPSHOT</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -35,19 +35,21 @@
   </developers>
 
   <properties>
-    <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>1.1.0</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.1.0</opensaml.swedish-eid.version>
+    <opensaml.version>3.4.0</opensaml.version>
+    <opensaml-ext.version>1.2.0-SNAPSHOT</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.0-SNAPSHOT</opensaml.swedish-eid.version>
 
-    <shibboleth.version>3.3.1</shibboleth.version>
-    <shibboleth.java-support.version>7.3.0</shibboleth.java-support.version>
-    <shibboleth.spring-extensions.version>5.3.0</shibboleth.spring-extensions.version>
+    <shibboleth.version>3.4.0</shibboleth.version>
+    <shibboleth.java-support.version>7.4.0</shibboleth.java-support.version>
+    <shibboleth.spring-extensions.version>5.4.0</shibboleth.spring-extensions.version>
 
-    <spring.version>4.3.2.RELEASE</spring.version>
-    <spring.webflow.version>2.4.4.RELEASE</spring.webflow.version>
+    <spring.version>4.3.19.RELEASE</spring.version>
+    <spring.webflow.version>2.4.8.RELEASE</spring.webflow.version>
     <spring.mobile.version>1.1.5.RELEASE</spring.mobile.version>
+    
+    <jackson.version>2.9.7</jackson.version>
 
-    <slf4j.version>1.7.12</slf4j.version>
+    <slf4j.version>1.7.25</slf4j.version>
     <junit.version>4.12</junit.version>
   </properties>
 
@@ -593,6 +595,40 @@
           </exclusion>
         </exclusions>
       </dependency>
+      
+      <!-- Jackson -->
+      <!-- Shibboleth uses Jackson 2.8.3. This version has reported vulnerabilities, so we change this ... -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+        <scope>provided</scope>
+        <type>jar</type>
+      </dependency>
+    
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+        <scope>provided</scope>
+        <type>jar</type>
+      </dependency>
+    
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+        <scope>provided</scope>
+        <type>jar</type>
+      </dependency>
+    
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-joda</artifactId>
+        <version>${jackson.version}</version>
+        <scope>provided</scope>
+        <type>jar</type>
+      </dependency>      
 
       <!-- Misc -->
       <dependency>
