--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.4.5</version>
+  <version>1.5.0-SNAPSHOT</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -44,13 +44,13 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
 
-    <shibboleth.version>3.3.1</shibboleth.version>
+    <shibboleth.version>3.4.0</shibboleth.version>
     
-    <shibboleth-base-dependency-bom.version>1.4.5</shibboleth-base-dependency-bom.version>
+    <shibboleth-base-dependency-bom.version>1.5.0-SNAPSHOT</shibboleth-base-dependency-bom.version>
     
     <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
-    <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>1.1.0</opensaml-ext.version>
+    <opensaml.version>3.4.0</opensaml.version>
+    <opensaml-ext.version>1.1.1</opensaml-ext.version>
     <opensaml.swedish-eid.version>1.1.0</opensaml.swedish-eid.version>
   </properties>
 
