--- a/shibboleth-extensions/pom.xml
+++ b/shibboleth-extensions/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.4.5</version>
+    <version>1.5.0-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
