Updates of conf-files for 3.4.0

--- a/idp/src/main/resources/conf/idp.properties
+++ b/idp/src/main/resources/conf/idp.properties
@@ -8,11 +8,19 @@ idp.entityID = https://idp.example.org
 idp.scope = example.org
 
 # General cookie properties (maxAge only applies to persistent cookies)
-#idp.cookie.secure = false
+# Note the default for idp.cookie.secure, you will usually want it set.
+idp.cookie.secure = true
 #idp.cookie.httpOnly = true
 #idp.cookie.domain =
 #idp.cookie.path =
 #idp.cookie.maxAge = 31536000
+
+# HSTS/CSP response headers
+#idp.hsts = max-age=0
+# X-Frame-Options value, set to DENY or SAMEORIGIN to block framing
+#idp.frameoptions = DENY
+# Content-Security-Policy value, set to match X-Frame-Options default
+#idp.csp = frame-ancestors 'none';
 
 # Set the location of user-supplied web flow definitions
 #idp.webflows = %{idp.home}/flows
@@ -75,6 +83,9 @@ idp.security.requireAuthnRequestsSigned=false
 
 # To default to SHA-1, set to shibboleth.SigningConfiguration.SHA1
 #idp.signing.config = shibboleth.SigningConfiguration.SHA256
+
+# To upgrade to AES-GCM encryption, set to shibboleth.EncryptionConfiguration.GCM
+#idp.encryption.config = shibboleth.EncryptionConfiguration.CBC
 
 # Configures trust evaluation of keys used by services at runtime
 # Defaults to supporting both explicit key and PKIX using SAML metadata.
@@ -159,8 +170,14 @@ idp.authn.favorSSO = true
 
 # Set to "shibboleth.consent.AttributeConsentStorageKey" to use an attribute
 # to key user consent storage records (and set the attribute name)
-#idp.consent.userStorageKey = shibboleth.consent.PrincipalConsentStorageKey
-#idp.consent.userStorageKeyAttribute = uid
+#idp.consent.attribute-release.userStorageKey = shibboleth.consent.PrincipalConsentStorageKey
+#idp.consent.attribute-release.userStorageKeyAttribute = uid
+#idp.consent.terms-of-use.userStorageKey = shibboleth.consent.PrincipalConsentStorageKey
+#idp.consent.terms-of-use.userStorageKeyAttribute = uid
+
+# Suffix of message property used as value of consent storage records when idp.consent.compareValues is true.
+# Defaults to text displayed to the user.
+#idp.consent.terms-of-use.consentValueMessageCodeSuffix = .text
 
 # Flags controlling how built-in attribute consent feature operates 
 #idp.consent.allowDoNotRemember = true
@@ -190,6 +207,7 @@ idp.authn.favorSSO = true
 
 # Set to custom bean for alternate storage of replay cache
 #idp.replayCache.StorageService = shibboleth.StorageService
+#idp.replayCache.strict = true
 
 # Toggles whether to allow outbound messages via SAML artifact
 #idp.artifact.enabled = true
@@ -213,10 +231,6 @@ idp.ui.fallbackLanguages=sv,en
 
 # CAS service registry implementation class
 #idp.cas.serviceRegistryClass=net.shibboleth.idp.cas.service.PatternServiceRegistry
-
-# Profile flows in which the ProfileRequestContext should be exposed
-# in servlet request under the key "opensamlProfileRequestContext"
-#idp.profile.exposeProfileRequestContextInServletRequest = SAML2/POST/SSO,SAML2/Redirect/SSO
 
 # F-TICKS auditing - set a salt to include hashed username
 #idp.fticks.federation=MyFederation
