--- a/idp/src/main/resources/conf/services.properties
+++ b/idp/src/main/resources/conf/services.properties
@@ -25,6 +25,7 @@ idp.service.relyingparty.checkInterval = PT15M
 #idp.service.attribute.resolver.failFast = false
 idp.service.attribute.resolver.checkInterval = PT15M
 #idp.service.attribute.resolver.maskFailures = true
+#idp.service.attribute.resolver.stripNulls = false
 
 #idp.service.attribute.filter.resources = shibboleth.AttributeFilterResources
 # NOTE: Failing the filter fast leaves no filters enabled.
@@ -53,9 +54,9 @@ idp.service.cas.registry.checkInterval = PT15M
 #idp.httpclient.useTrustEngineTLSSocketFactory = false
 #idp.httpclient.useSecurityEnhancedTLSSocketFactory = false
 #idp.httpclient.connectionDisregardTLSCertificate = false
-#idp.httpclient.connectionRequestTimeout = 60000
-#idp.httpclient.connectionTimeout = 60000
-#idp.httpclient.socketTimeout = 60000
+#idp.httpclient.connectionRequestTimeout = PT1M
+#idp.httpclient.connectionTimeout = PT1M
+#idp.httpclient.socketTimeout = PT1M
 #idp.httpclient.maxConnectionsTotal = 100
 #idp.httpclient.maxConnectionsPerRoute = 100
 #idp.httpclient.memorycaching.maxCacheEntries = 50
